src/test/ui/regions/regions-early-bound-error-method.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/regions-early-bound-error-method.rs:20:9
   |
LL |         g2.get()
   |         ^^^^^^^^
   |
note: ...the reference is valid for the lifetime `'a` as defined here...
  --> $DIR/regions-early-bound-error-method.rs:18:6
   |
LL | impl<'a> Box<'a> {
   |      ^^
note: ...but the borrowed content is only valid for the lifetime `'b` as defined here
  --> $DIR/regions-early-bound-error-method.rs:19:11
   |
LL |     fn or<'b,G:GetRef<'b>>(&self, g2: G) -> &'a isize {
   |           ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0312`.
